# agent

./: .env.example  .gitattributes  .gitignore  .gitmodules  .npmrc  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.cursor/rules/: lint-after-changes.mdc
.cursor/skills/devops/: SKILL.md
.cursor/skills/sample/: SKILL.md
apps/client/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/client/src/: index.css  main.tsx  routeTree.gen.ts
apps/server/: .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json
data/qlib/: .env.example  README.md  docker-compose.yml  pyproject.toml
data/qlib/app/: config.py
data/qlib/app/services/: source_bundle.py  sync_meta.py  sync_runner.py  sync_state.py  tushare_client.py
data/qlib/scripts/: dump_bin.py  dump_daily.py  init_tushare_data.py  migrate_source_layout.py  reconcile_source.py
data/qlib/strategies/: _paths.py
data/qlib/strategies/day_trade/: backtest.py
data/qlib/strategies/vol_spike/: screener.py
data/qlib/tests/: test_qlib_runner.py  test_source_bundle.py
docs/: interrupt-protocol.md
infra/markitdown/: .env.example  Dockerfile  README.md  docker-compose.yml  server.py
infra/postgres/: .env.example  README.md  docker-compose.yml
infra/qdrant/: .env.example  README.md  docker-compose.yml
infra/qlib/: .env.example  Dockerfile  README.md
infra/redis/: .env.example  README.md  docker-compose.yml
scripts/: qlib-daily-update.ts  qlib-package-source.ts  tsc-go.ts
types/: global.d.ts
(+298 files in other folders)
