[project]
name = "qlib-data-service"
version = "0.1.0"
description = "Qlib quantitative data service with FastAPI streaming logs"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0,<0.110.0",
    "uvicorn[standard]>=0.23.0,<0.28.0",
    "pydantic-settings>=2.0.0,<2.3.0",
    "pyyaml>=6.0.2",
    "tushare>=1.4.0",
    "httpx>=0.24.0,<0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
